fix modals on mobile devices

--- a/fmarket/src/main/webapp/app/components/headerComponent/headerComponent.css
+++ b/fmarket/src/main/webapp/app/components/headerComponent/headerComponent.css
@@ -48,7 +48,7 @@
     }
 }
 
-.sidenav .nav.navbar-nav.navbar-right{
+.sidenav-mobile .nav.navbar-nav.navbar-right{
     margin: auto;
 }
 
